# generate-mercator-tiles-from-srtm

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: download.sh  links.txt
generate_tiles/: __main__.py  constants.py  create_archives.py  create_download_list.py  generate.py  generate_list_of_empties.py  generate_within_polygon.py  imagetools.py  logger.py  mercator.py  prune_empties.py  utils.py  webmercatorcell.py
test/: index.html  script.js  style.css
